minikube/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata: 
  name: nginx
spec:
  rules:
    - host: exampleingress.com
      http:
        paths:
          - backend:
              serviceName: nginx 
              servicePort: 80
